rules.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-egress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
